Backport the mod to 1.16.5